mudanças de template

--- a/output/tags.html
+++ b/output/tags.html
@@ -29,9 +29,9 @@
   <div id="topMenu">
   
     <ul>
-    	<li><a href="http://carneiro.blog.br/um">Home</a></li>
+    	<li><a href="http://carneiro.blog.br/um">Início</a></li>
         <li>&ndash;</li>
-        <li><a href="http://carneiro.blog.br/um/archives.html">Archives</a></li>
+        <li><a href="http://carneiro.blog.br/um/archives.html">Arquivo</a></li>
         
     </ul>
   
@@ -58,6 +58,11 @@
 <li>
         <h3>Tags</h3>
         <ul>
+                <li><a href="http://carneiro.blog.br/um/tag/python.html">python</a></li>
+                <li><a href="http://carneiro.blog.br/um/tag/cidadania.html">cidadania</a></li>
+                <li><a href="http://carneiro.blog.br/um/tag/debian.html">debian</a></li>
+                <li><a href="http://carneiro.blog.br/um/tag/linux.html">linux</a></li>
+                <li><a href="http://carneiro.blog.br/um/tag/dados-abertos.html">dados abertos</a></li>
         </ul>
 </li>
     
@@ -68,6 +73,11 @@
   	
 <div class="blogItem">
 <ul>
+    <li>python</li>
+    <li>cidadania</li>
+    <li>debian</li>
+    <li>linux</li>
+    <li>dados abertos</li>
 </ul>
 </div>
   
