--- a/output/authors.html
+++ b/output/authors.html
@@ -29,9 +29,9 @@
   <div id="topMenu">
   
     <ul>
-    	<li><a href="http://carneiro.blog.br/um">Home</a></li>
+    	<li><a href="http://carneiro.blog.br/um">Início</a></li>
         <li>&ndash;</li>
-        <li><a href="http://carneiro.blog.br/um/archives.html">Archives</a></li>
+        <li><a href="http://carneiro.blog.br/um/archives.html">Arquivo</a></li>
         
     </ul>
   
@@ -58,6 +58,11 @@
 <li>
         <h3>Tags</h3>
         <ul>
+                <li><a href="http://carneiro.blog.br/um/tag/python.html">python</a></li>
+                <li><a href="http://carneiro.blog.br/um/tag/cidadania.html">cidadania</a></li>
+                <li><a href="http://carneiro.blog.br/um/tag/debian.html">debian</a></li>
+                <li><a href="http://carneiro.blog.br/um/tag/linux.html">linux</a></li>
+                <li><a href="http://carneiro.blog.br/um/tag/dados-abertos.html">dados abertos</a></li>
         </ul>
 </li>
     
@@ -68,7 +73,7 @@
   	
     <h1>Authors on Só mais um Carneiro</h1>
 
-    <ul>        <li><a href="http://carneiro.blog.br/um/author/otavio-carneiro.html">Otávio Carneiro</a> (44)</li>
+    <ul>        <li><a href="http://carneiro.blog.br/um/author/otavio-carneiro.html">Otávio Carneiro</a> (45)</li>
     </ul>
   
   </div><!-- end #mainContent -->
