--- a/output/categories.html
+++ b/output/categories.html
@@ -6,8 +6,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   
   <title>Só mais um Carneiro</title>
-<link href="http://carneiro.blog.br/um/theme/css/style.css" rel="stylesheet" type="text/css" media="screen" />
-<link href="http://carneiro.blog.br/um/" type="application/atom+xml" rel="alternate" title="Só mais um Carneiro ATOM Feed" />
+<link href="./theme/css/style.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="./" type="application/atom+xml" rel="alternate" title="Só mais um Carneiro ATOM Feed" />
   
   <!--[if IE]>
   <style type="text/css"> 
@@ -22,28 +22,29 @@
 <div id="container">
 
   <div id="header">
-  <h1><a href="http://carneiro.blog.br/um">Só mais um Carneiro</h1>
+  <h1><a href=".">Só mais um Carneiro</h1>
   
   </div><!-- end #header -->
   
   <div id="topMenu">
   
     <ul>
-    	<li><a href="http://carneiro.blog.br/um">Início</a></li>
+    	<li><a href=".">Início</a></li>
         <li>&ndash;</li>
-        <li><a href="http://carneiro.blog.br/um/archives.html">Arquivo</a></li>
+        <li><a href="./archives.html">Arquivo</a></li>
         
     </ul>
   
   </div><!-- end #topMenu -->
 
   <div id="sidebar">
+    <div style="height:120px">&nbsp;</div>
 	<h3>Páginas</h3>
 	<ul>
 	</ul>
     <h3>Categorias</h3>
     <ul>
-		 <li ><a href="http://carneiro.blog.br/um/category/misc.html">misc</a></li>
+		 <li ><a href="./category/misc.html">misc</a></li>
 	</ul>
 	<li>
 		<h3>Diga-me com quem andas...</h3>
@@ -58,11 +59,11 @@
 <li>
         <h3>Tags</h3>
         <ul>
-                <li><a href="http://carneiro.blog.br/um/tag/python.html">python</a></li>
-                <li><a href="http://carneiro.blog.br/um/tag/cidadania.html">cidadania</a></li>
-                <li><a href="http://carneiro.blog.br/um/tag/debian.html">debian</a></li>
-                <li><a href="http://carneiro.blog.br/um/tag/linux.html">linux</a></li>
-                <li><a href="http://carneiro.blog.br/um/tag/dados-abertos.html">dados abertos</a></li>
+                <li><a href="./tag/python.html">python</a></li>
+                <li><a href="./tag/dados-abertos.html">dados abertos</a></li>
+                <li><a href="./tag/cidadania.html">cidadania</a></li>
+                <li><a href="./tag/debian.html">debian</a></li>
+                <li><a href="./tag/linux.html">linux</a></li>
         </ul>
 </li>
     
