--- a/output/tags.html
+++ b/output/tags.html
@@ -42,11 +42,6 @@
 	<h3>Páginas</h3>
 	<ul>
 	</ul>
-    <h3>Categorias</h3>
-    <ul>
-		 <li ><a href="./category/misc.html">misc</a></li>
-	</ul>
-	<li>
 		<h3>Diga-me com quem andas...</h3>
 		<ul>
                     <li><a href="http://calango.club/">Calango Hacker Clube</a></li>
@@ -55,17 +50,17 @@
                     <li><a href="http://getpelican.com/">Pelican</a></li>
                     <li><a href="http://python.org/">Python.org</a></li>
 		</ul>
-	</li>
-<li>
         <h3>Tags</h3>
         <ul>
+                <li><a href="./tag/educacao.html">educação</a></li>
+                <li><a href="./tag/cidadania.html">cidadania</a></li>
+                <li><a href="./tag/raspberry-pi.html">raspberry pi</a></li>
+                <li><a href="./tag/minecraft.html">minecraft</a></li>
                 <li><a href="./tag/python.html">python</a></li>
                 <li><a href="./tag/dados-abertos.html">dados abertos</a></li>
-                <li><a href="./tag/cidadania.html">cidadania</a></li>
-                <li><a href="./tag/debian.html">debian</a></li>
                 <li><a href="./tag/linux.html">linux</a></li>
+                <li><a href="./tag/debian.html">debian</a></li>
         </ul>
-</li>
     
   
   </div><!-- end #sidebar -->
@@ -74,11 +69,14 @@
   	
 <div class="blogItem">
 <ul>
+    <li>educação</li>
+    <li>cidadania</li>
+    <li>raspberry pi</li>
+    <li>minecraft</li>
     <li>python</li>
     <li>dados abertos</li>
-    <li>cidadania</li>
-    <li>debian</li>
     <li>linux</li>
+    <li>debian</li>
 </ul>
 </div>
   
@@ -87,8 +85,6 @@
 <div class="clearfloat"></div>
 
   <div id="footer">
-  
-    <p><a href="http://css4free.com/" title="free CSS web site designs">Free CSS Gallery</a></p>
     <p>Orgulhosamente movido a <a href="http://alexis.notmyidea.org/pelican/">pelican</a>, que roda em <a href="http://python.org">python</a>.
   </div><!-- end #footer -->
 
